testsuite/tests/grammar/invalid_lkt/no_grammar.lkt
import lexer_example
import common
